Fix scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,6 @@ $scrollBarWidth: 13px;
 
 html {
   height: 100%;
-  overflow-y: hidden;
   color: $textBaseColor;
   background-color: $backgroundBaseColor;
   font: 400 24px -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, 'Open Sans', Arial, sans-serif;
